# pave-bench

./: .gitignore  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
adapters/: README.md
baselines/: README.md
dataset/v0/: manifest.example.jsonl  manifest.jsonl
dataset/v0/cases/demo_human_trace_guided/: gold.geojson  guide.geojson  metadata.json  predictions.example.jsonl
dataset/v0/cases/pb_us_il_justice_testa_001/: README.md  gold.geojson  metadata.json
dataset/v0/propaving_v0/: README.md  manifest.jsonl
dataset/v0/propaving_v0/cases/propaving_009d9cf01d9f01a5/: guide.geojson  metadata.json
dataset/v0/propaving_v0/cases/propaving_012f05118871fd0b/: guide.geojson  metadata.json
docs/: benchmark-card.md  first-results-plan.md  google-static-maps-use.md  imagery-policy.md  labeling-spec.md  proving-instant-takeoff.md  publication-checklist.md  submission-format.md
pavebench/: __init__.py  cli.py  eval.py  geometry.py  leaderboard.py  manifest.py  reporting.py  schemas.py  stalls.py
pavebench/baselines/: __init__.py  empty.py  oracle.py
pavebench/importers/: __init__.py  human_trace.py  propaving_fixture.py
results/: leaderboard.md  runs.example.jsonl
tests/: test_cli.py  test_cli_stalls.py  test_empty_baseline.py  test_eval.py  test_eval_extensions.py  test_geometry.py  test_human_trace_importer.py  test_leaderboard.py  test_manifest.py  test_mask_predictions.py  test_oracle.py  test_propaving_ingest.py  test_reporting.py  test_reporting_extensions.py  test_schemas.py  test_stalls.py
tools/: import_propaving_traces.py
(+496 files in other folders)
