[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pavebench"
version = "0.1.0"
description = "Benchmark harness for aerial pavement segmentation and polygon extraction."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ProPaving" }
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
pavebench = "pavebench.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
